fix replayer container overflow

--- a/tosu_overlays/showcase/style.css
+++ b/tosu_overlays/showcase/style.css
@@ -179,6 +179,7 @@
     max-height: 32px;
     font-size: 24px;
     overflow-y: hidden;
+    overflow-x: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     font-weight: 400;
